# 2025-Public-Friend

./: .gitignore  Codex.md
2025 Druid Donum/2025 Druid Full-auto Firing/: .gitignore  README.md  app.py  main.py  plan.md  prompt.md  requirements.txt
Appducator/: .coverage  2nd_Claude_Audit.md  README.md  STATUS.md  app_utils.py  requirements.txt  streamlit_app.py
Appducator/data/: glossary.json  vocabulary.json
ConferenceChasor/: README.md  app.py  config.example.yaml  requirements.txt  stability_review.md  web_runner.py
_DevDoc/: 2025-12-10_Claude_Appducator_v2.0.0.md  2025-12-10_Claude_ConferenceChasor_v1.0.0.md  2025-12-10_Claude_GPT5_Cross_Audit_Improvement_Plan.md  2025-12-10_Claude_druid_donum_v1.1.02.md  2025-12-10_Claude_slava_talk_v1.0.0.md  2025-12-10_Claude_tools_v1.0.0.md  20250209_GPT-5_2025-Public-Friend_v1.2.md
druid_donum/: CURRENT_STATUS.md
naPO/: .env.example  .eslintrc.json  .gitignore  .prettierignore  CLAUDE_CODE_INSTRUCTIONS.yaml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  package.json  start.sh  vercel.json
naQV/: CLAUDE.md  Makefile  README.md  bootstrap.md  chart_data.json  pyproject.toml  report.md  version1_data.json  version2_data.json
naQV/Docs/: openApi_manual_v1.0.pdf:Zone.Identifier
naQV/src/naqv/: __init__.py  client.py  models.py
naQV/tests/: __init__.py  test_client.py
slava_talk/: BATON_TOUCH.md  README.md  UI_UX.md  requirements.txt  slava_talk_debugging_plan.md  streamlit_app.py
tools/: .env.example  README.md  batch_update_examples.py  openai_responses_diagnose.py
(+439 files in other folders)
